--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
       <option value="Klätterdomen">Klätterdomen</option>
       <option value="BackaBoulder">Backa Boulder</option>
       <option value="Utomhus">Utomhus</option>
+      <option value="Utomhus">Kilter Board</option>
+      <option value="Utomhus">Moon Board</option>
     </select>
     </div>
   </div>
