--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
       <option value="Utomhus">Utomhus</option>
       <option value="Utomhus">Kilter Board</option>
       <option value="Utomhus">Moon Board</option>
+      <option value="Utomhus">Övrigt</option>
     </select>
     </div>
   </div>
