--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 <div class="card">
   <h2>👤 Mina klättringar</h2>
-  <ul id="myLog"></ul>
+  <canvas id="myChart" width="400" height="200"></canvas>
 </div>
 
 <div class="card">
@@ -90,12 +90,16 @@
     <h2>🏆 Topplista – Flest klättringar</h2>
     <ol id="leaderboardList"></ol>
   </div>
+  <div class="card">
+    <h2>👑 Svåraste klättring per användare</h2>
+    <ol id="hardestLeaderboard"></ol>
+  </div>
 </div>
 
 
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
-
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="app.js">
 </script>
 
